--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "sailer" "\0"
+            VALUE "FileDescription", "gemini_goals" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "sailer" "\0"
+            VALUE "InternalName", "gemini_goals" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "sailer.exe" "\0"
-            VALUE "ProductName", "sailer" "\0"
+            VALUE "OriginalFilename", "gemini_goals.exe" "\0"
+            VALUE "ProductName", "gemini_goals" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
